--- a/build.gradle
+++ b/build.gradle
@@ -108,4 +108,5 @@ cpdCheck {
     }
     source = sourceSets.main.allJava // only java, groovy and scala classes in 'main' sourceSets
     minimumTokenCount = 50
+    ignoreFailures = true
 }
