--- a/build.gradle
+++ b/build.gradle
@@ -1,116 +1,96 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.4.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'java'
     id 'eclipse'
     id 'jacoco'
     id 'checkstyle'
-    id "com.github.spotbugs" version "3.0.0"
+    id 'com.github.spotbugs' version '4.0.4'
     id 'pmd'
-    //id 'de.aaschmid.cpd' version '3.1'
+    id 'de.aaschmid.cpd' version '3.1'
 }
-
 group = 'com.tactfactory.monprojet'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
 repositories {
-	mavenCentral()
+    mavenCentral()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
 }
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'mysql:mysql-connector-java'
+    //testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
-
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
     ignoreFailures = true
 }
     
-def classesJava = "${project.buildDir}/classes/java/main/"
-def javasRoot = "${rootProject.rootDir}/src/main/java"
-def testClassesJava = "${project.buildDir}/classes/java/test"
-def testJavaRoot = "${rootProject.rootDir}/src/test/java"
+//def classesJava = "${project.buildDir}/classes/java/main/"
+//def javasRoot = "${rootProject.rootDir}/src/main/java"
+//def testClassesJava = "${project.buildDir}/classes/java/test"
+//def testJavaRoot = "${rootProject.rootDir}/src/test/java"
 
-def javaRootFB = "${javasRoot}/com/tactfactory/algotojava"
-def classesJavaFB = "${classesJava}/com/tactfactory/algotojava"
-
+//Checkstyle
 checkstyle {
     toolVersion = "6.3"
-}
-
-task checkstyleMain (type: Checkstyle, overwrite: true) {
     ignoreFailures = true
     showViolations = false
-    source fileTree('src/main/java')
-    include '**/*.java'
-    exclude '**/gen/**'
-    exclude '**/R.java'
-    exclude '**/BuildConfig.java'
-    reports {
-        //xml.destination "$project.buildDir/reports/checkstyle/main.xml"
-    }
-    classpath = fileTree(classesJava)
+    checkstyleTest.enabled = false
     configFile = file("${rootProject.rootDir}/checkstyle.xml")
 }
-
-task checkstyleTest (type: Checkstyle, overwrite: true){
-    ignoreFailures = true
-    showViolations = false
-    source fileTree('src/test/java')
-    include '**/*.java'
-    exclude '**/gen/**'
-    exclude '**/R.java'
-    exclude '**/BuildConfig.java'
+tasks.withType(Checkstyle) {
     reports {
-        //xml.destination "$project.buildDir/reports/checkstyle/test.xml"
+        xml.enabled true
+        html.enabled true
+        xml.destination file("${project.buildDir}/reports/checkstyle/main.xml")
     }
-    classpath = fileTree("$project.buildDir/classes/test/")
-    configFile = file("${rootProject.rootDir}/checkstyle.xml")
 }
-
-task pmdMain(type: Pmd, overwrite: true) {
+//spotbug
+spotbugs {
+    toolVersion = '4.0.1'
     ignoreFailures = true
-    description 'Runs PMD inspection against Android sourcesets.'
-    group = 'Code Quality'
+    spotbugsTest.enabled = false
+}
+// Jacoco
+jacoco {
+    toolVersion = "0.8.2"
+}
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled true
+    }
+}
+//pmd
+pmd {
+    pmdTest.enabled = false
+    toolVersion = '6.8.0'
     ruleSetFiles = files("${rootProject.rootDir}/pmd_rules.xml")
-    source = fileTree(javasRoot)
-    include '**/*.java'
-    exclude '**/gen/**'
-
-    reports {
-        xml.enabled = true
-        html.enabled = false
-    }
-}
-
-task pmdTest(type: Pmd, overwrite: true) {
     ignoreFailures = true
-    description 'Runs PMD inspection against Android sourcesets.'
-    group = 'Code Quality'
-    ruleSetFiles = files("${rootProject.rootDir}/pmd_rules.xml")
-    source = fileTree(testJavaRoot)
-    include '**/*.java'
-    exclude '**/gen/**'
-
+}
+tasks.withType(Pmd) {
     reports {
-        xml.enabled = true
-        html.enabled = false
+        xml.enabled true
+        html.enabled true
     }
 }
-
-/*cpdCheck {
+//cpd
+cpdCheck {
     reports {
         text.enabled = true
         xml.enabled = true
     }
     source = sourceSets.main.allJava // only java, groovy and scala classes in 'main' sourceSets
     minimumTokenCount = 50
-    ignoreFailures = true
-}*/
-
-spotbugs {
-	ignoreFailures = true
+}
+//javadoc
+javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compile
 }
